# CNN_Manuscript

./: 10000trainning0-9_sigmoid_1Hiddenlayer_40Neurons  10000trainning0-9_sigmoid_3Hiddenlayer_100Neurons  Analysis_Complexity  CMakeLists.txt  Performance_Data  Rapport_1  cnn.c  cnn.h  cnn.txt  cnn_1.c  cnn_1.h  commandes_perfs  data_Images.c  data_Images.h  fonction_test.c  label_Writer  label_Writer.cpp  logs  logs_v1  main.c  mat.c  mat.h  perf_v0  perf_v1  plan_de_travail  readme  rgb2Grayscale.h  test  test.c  train_of_0_1_20.cnn  train_of_0_1_with_20.cnn  train_of_0_1_with_20_intersect.cnn  train_of_0_o_20.cnn  train_of_0_with_10.cnn  train_of_cnn_1_on_0_20.cnn  train_of_cnn_1_on_numbers.cnn  train_of_o.cnn
Phase 1/: CMakeLists.txt  Input.h  converter.sh  data_structure_of_P6_PPM.txt  function_Trigger.h  main.c  neuron_Network_1.0.h  reader.h  rgb2Grayscale.h
Phase 2/: CMakeLists.txt  cnn.c  cnn.h  cnn.txt  cnnL.ma  data_Images.c  data_Images.h  hsf_0_00000.ppm  label_Writer  label_Writer.cpp  main.c  mat.c  mat.h  test  test_reader.c
test reader/: data_Images.c  data_Images.h  main.c  mat.h
train_and_test_0/: hsf_0_00001.ppm  hsf_0_00003.ppm  hsf_0_00004.ppm  hsf_0_00005.ppm  hsf_0_00006.ppm  hsf_0_00007.ppm  hsf_0_00008.ppm  hsf_0_00009.ppm  hsf_0_00010.ppm  hsf_0_00013.ppm  hsf_0_00014.ppm  hsf_0_00015.ppm  hsf_0_00016.ppm  hsf_0_00018.ppm  hsf_0_00019.ppm  label_0_1_20.txt  label_train_0_1_intersect.txt  label_train_o.txt
train_and_test_0/test_0/: hsf_0_00100.ppm  hsf_0_00101.ppm  hsf_0_00103.ppm  hsf_0_00106.ppm  hsf_0_00108.ppm  hsf_0_00109.ppm  (+6 more)
(+10012 files in other folders)
